<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hpwin8.smartsupermarket.SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newaccount"
        android:textSize="50sp"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="#F5F5F5"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:hint="@string/username"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailText"
        android:hint="@string/email"
        android:layout_centerVertical="true"
        android:layout_below="@+id/usernameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"


        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/passwordText"
        android:layout_below="@+id/emailText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber"
        android:id="@+id/phoneText"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="CREAT ACCOUNT"

        android:textSize="30sp"
        android:id="@+id/signupbtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
